--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,22 @@
 .flex-container {
     display: flex;
-    /*flex-wrap: wrap;*/
+    flex-wrap: wrap;
     gap: 10px;
 }
 
 
-
-.jardin {
-    justify-content: space-between;
-}
-
 .nombre__alumno {
     width: 70%;
+}
+
+
+
+@media (min-width: 732px) {
+    .flex-container {
+        flex-wrap: nowrap;
+    }
+
+    .nombre__alumno {
+        width: 100%;
+    }
 }
